unpackaged/objects/Mapping_Master__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won or Lost</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Dead/Cancelled or Deal Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Logic_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Logic Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Object__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type_lsig__c</fullName>
                    <label>Type Lsig</label>
                </value>
                <value>
                    <fullName>Market_Segment__c</fullName>
                    <label>Market Segment</label>
                </value>
                <value>
                    <fullName>Industry_lsig__c</fullName>
                    <label>Industry</label>
                </value>
                <value>
                    <fullName>Contact_Role__c</fullName>
                    <label>Contact Role</label>
                </value>
                <value>
                    <fullName>Status__c</fullName>
                    <label>Status</label>
                </value>
                <value>
                    <fullName>Application_Interest_Segment__c</fullName>
                    <label>Application Interest Segment</label>
                </value>
                <value>
                    <fullName>Sub_Application_Interest_Segment__c</fullName>
                    <label>Sub Application Interest Segment</label>
                </value>
                <value>
                    <fullName>Marketing_Vertical__c</fullName>
                    <label>Marketing Vertical</label>
                </value>
                <value>
                    <fullName>Product_Family__c</fullName>
                    <label>Product Family</label>
                </value>
                <value>
                    <fullName>StageName</fullName>
                    <label>Stage</label>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Line_of_Business__c</fullName>
                    <label>Line of Business</label>
                </value>
                <value>
                    <fullName>Competitor_Data__c</fullName>
                    <label>Competitor Data</label>
                </value>
                <value>
                    <fullName>Cancellation_Lost_Data__c</fullName>
                    <label>Cancellation/Lost Data</label>
                </value>
                <value>
                    <fullName>Product_Interest__c</fullName>
                    <label>Product Interest</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination_Value__c</fullName>
        <label>Destination Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Object__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate_Account_Type__c</fullName>
                    <label>Corporate Account Type</label>
                </value>
                <value>
                    <fullName>Account_Type__c</fullName>
                    <label>Account Type</label>
                </value>
                <value>
                    <fullName>Special_Account_Type__c</fullName>
                    <label>Special Account Type</label>
                </value>
                <value>
                    <fullName>Market_Segment__c</fullName>
                    <label>Market Segment</label>
                </value>
                <value>
                    <fullName>Business_Division__c</fullName>
                    <label>Business Division</label>
                </value>
                <value>
                    <fullName>Division__c</fullName>
                    <label>Division</label>
                </value>
                <value>
                    <fullName>Department__c</fullName>
                    <label>Department</label>
                </value>
                <value>
                    <fullName>Sub_Department__c</fullName>
                    <label>Sub Department</label>
                </value>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Decision_Maker__c</fullName>
                    <label>Decision Maker</label>
                </value>
                <value>
                    <fullName>LeadSource</fullName>
                    <label>Lead Source</label>
                </value>
                <value>
                    <fullName>Inactive__c</fullName>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Application_of_Interest__c</fullName>
                    <label>Application of Interest</label>
                </value>
                <value>
                    <fullName>Area_of_Interest__c</fullName>
                    <label>Area of Interest</label>
                </value>
                <value>
                    <fullName>StageName</fullName>
                    <label>Stage</label>
                </value>
                <value>
                    <fullName>Contact Type</fullName>
                </value>
                <value>
                    <fullName>Primary_Application__c</fullName>
                    <label>Primary Application</label>
                </value>
                <value>
                    <fullName>Secondary_Application__c</fullName>
                    <label>Secondary Application</label>
                </value>
                <value>
                    <fullName>Market_Vertical1__c</fullName>
                    <label>Market Vertical 1</label>
                </value>
                <value>
                    <fullName>Market_Vertical_2__c</fullName>
                    <label>Market Vertical 2</label>
                </value>
                <value>
                    <fullName>Competitor_1__c</fullName>
                    <label>Competitor 1</label>
                </value>
                <value>
                    <fullName>Competitor_Product_1__c</fullName>
                    <label>Competitor Product 1</label>
                </value>
                <value>
                    <fullName>Competitor_2__c</fullName>
                    <label>Competitor 2</label>
                </value>
                <value>
                    <fullName>Competitor_Product_2__c</fullName>
                    <label>Competitor Product 2</label>
                </value>
                <value>
                    <fullName>Competitor_3__c</fullName>
                    <label>Competitor 3</label>
                </value>
                <value>
                    <fullName>Competitor_Product_3__c</fullName>
                    <label>Competitor Product 3</label>
                </value>
                <value>
                    <fullName>Location_Type__c</fullName>
                    <label>Location Type</label>
                </value>
                <value>
                    <fullName>Customer_account_type__c</fullName>
                    <label>Customer Account Type</label>
                </value>
                <value>
                    <fullName>Type</fullName>
                </value>
                <value>
                    <fullName>Institution_Type__c</fullName>
                    <label>Institution Type</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_OpCo__c</fullName>
        <label>Source OpCo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Value__c</fullName>
        <label>Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping Master</label>
    <listViews>
        <fullName>Accounts_Type_All_OpCos</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>Source_Field__c</field>
            <operation>equals</operation>
            <value>Industry</value>
        </filters>
        <label>Accounts.Industry - All OpCos</label>
    </listViews>
    <listViews>
        <fullName>All_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Object__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <columns>Custom_Logic_Required__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>SCIEX</value>
        </filters>
        <label>All Mapping</label>
    </listViews>
    <listViews>
        <fullName>Beckman_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Beckman - Contacts</label>
    </listViews>
    <listViews>
        <fullName>Beckman_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Beckman - Accounts</label>
    </listViews>
    <listViews>
        <fullName>Beckman_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Destination_Field__c</field>
            <operation>equals</operation>
            <value>Market_Segment__c</value>
        </filters>
        <label>Beckman - Opportunities</label>
    </listViews>
    <listViews>
        <fullName>IDBS_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>IDBS - Accounts</label>
    </listViews>
    <listViews>
        <fullName>IDBS_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>IDBS - Contacts</label>
    </listViews>
    <listViews>
        <fullName>IDBS_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Destination_Field__c</field>
            <operation>equals</operation>
            <value>Market_Segment__c</value>
        </filters>
        <label>IDBS - Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Leica_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <label>Leica - Contacts</label>
    </listViews>
    <listViews>
        <fullName>Leica_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <label>Leica - Accounts</label>
    </listViews>
    <listViews>
        <fullName>Leica_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <filters>
            <field>Destination_Field__c</field>
            <operation>equals</operation>
            <value>Market_Segment__c</value>
        </filters>
        <label>Leica - Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Moldev_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Moldev - Contacts</label>
    </listViews>
    <listViews>
        <fullName>Moldev_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Moldev - Accounts</label>
    </listViews>
    <listViews>
        <fullName>Moldev_Opportunities</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <filters>
            <field>Destination_Field__c</field>
            <operation>equals</operation>
            <value>Market_Segment__c</value>
        </filters>
        <label>Moldev - Opportunities</label>
    </listViews>
    <listViews>
        <fullName>SCIEX_Contacts</fullName>
        <columns>NAME</columns>
        <columns>Object__c</columns>
        <columns>Source_OpCo__c</columns>
        <columns>Source_Field__c</columns>
        <columns>Source_Value__c</columns>
        <columns>Destination_Field__c</columns>
        <columns>Destination_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_OpCo__c</field>
            <operation>equals</operation>
            <value>SCIEX</value>
        </filters>
        <filters>
            <field>Object__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>SCIEX - Contacts</label>
    </listViews>
    <nameField>
        <displayFormat>MMID-{00000}</displayFormat>
        <label>Mapping Master ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapping Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>